<resources>
    <string name="app_name">FIFA ALBUM App</string>

    //Bottom Bar
    <string name="explore">My Album</string>
    <string name="favorites">favorites</string>
    <string name="scan">Scan</string>
    <string name="creations">Creations</string>
    <string name="account">Account</string>
    <string name="manage_account">Manage Account</string>

    //Login, register, Manage Account
    <string name="mail">Mail</string>
    <string name="newPassword">New Password (Optional)</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Scan">Scan</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="updateInfo">Update Info</string>
    <string name="updatePhoto">Update Photo</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="logOut">Log Out</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>

    //CardItemDetails
    <string name="fullNamePlayer">Raúl Alonso Jiménez Rodríguez</string>
    <string name="shortNamePlayer">Raúl Jiménez</string>
    <string name="shortPositionPlayer">ST</string>
    <string name="numberPlayer">10</string>
    <string name="birthPlayer">May 6, 1999, Monterrey, N.L., México</string>
    <string name="positionPlayer">Striker (ST)</string>
    <string name="heightPlayer">6 FT 3 IN (1.90 M)</string>
    <string name="currentTeamPlayer">Fulham (England)</string>
    <string name="firstTeamPlayer">Club America (2011 to 2014)</string>
    <string name="selectionAchievementsPlayer">OLYMPICS GAMES GOLD MEDAL 2012 (sub-23), CONCACAF GOLD CUP(2019, 2025), CONCACAF NATIONS LEAGUE (2025)</string>

    //CardItemDetailsStatic
    <string name="personalInformation">PERSONAL INFORMATION</string>
    <string name="fullName">FULL NAME:</string>
    <string name="birth">BIRTH:</string>
    <string name="position">POSITION:</string>
    <string name="height">HEIGHT:</string>
    <string name="careerInformation">CAREER INFORMATION</string>
    <string name="currentTeam">CURRENT TEAM:</string>
    <string name="firstTeam">FIRST TEAM:</string>
    <string name="selectionAchievements">SELECTION ACHIEVEMENTS</string>

    //New Publication
    <string name="titlePublication">Title</string>
    <string name="titleText">Write a Title for the Publication</string>
    <string name="btnTextImage">Load Main Photo</string>
    <string name="btnTextImages">Load Instructions Photos</string>
    <string name="description">Description</string>
    <string name="descriptionText">Write a Description about your DIY</string>
    <string name="options">Select an Option Theme for your DIY</string>
    <string name="instructions">Instructions</string>
    <string name="instructionsText">Write your detailed instructions</string>
    <string name="publish">Publish DIY</string>

    //Buttons Feed Details
    <string name="addFavorite">Add Card to Favorites</string>
    <string name="removeFavorite">Remove Card from Favorites</string>
    <string name="edit">Edit Publication</string>
    <string name="delete">Delete Publication</string>
    <string name="update_main_image">Update Main Photo</string>
    <string name="update_instruction_photos">Update Instructions Photos</string>

    //Messages
    <string name="loginFirst">You need to Login First!</string>
    <string name="loginSuccessful">Login Successful!</string>
    <string name="logoutSuccessful">Logout Successful!</string>
    <string name="wrongCredentials">Wrong Credentials!</string>
    <string name="differentPasswords">Different Passwords!</string>
    <string name="checkEmail">Wrong Email Format!</string>
    <string name="checkPassword">Wrong Password Format!</string>
    <string name="fillFields">Fill all the fields First!</string>
    <string name="verifyPassword">Please Verify Password!</string>
    <string name="userUpdated">User Updated!</string>
    <string name="userCreated">User Created!</string>
    <string name="userAlreadyExists">Email Already Exists!</string>
    <string name="loginRequired">Login Required!</string>
    <string name="addedToFavorites">Added to Favorites!</string>
    <string name="removedFromFavorites">Removed from Favorites!</string>
    <string name="notHaveFavorites">You do not have Favorites!</string>
    <string name="unableToLoadData">Unable to load Data!</string>
    <string name="error">Error!</string>
    <string name="error2">Something went Wrong!</string>
    <string name="alreadyFavorite">You already have it in favorites!</string>


    <string name="scanCanceled">Scan Canceled</string>
    <string name="scanCompleted">Scanned Successfully</string>
    <string name="scanMessage">Point to your QR Code!</string>


    <string name="publicationEdited">Card Edited!</string>

    <string name="publicationDeleted">You Already have it!</string>
    <string name="publicationCreated">Card Added!</string>
    <string name="cardAlreadyClaimed">Card is already claimed</string>

    <string name="noPublications">There are no Cards!</string>
    <string name="notHavePublications">You not have Cards!</string>

    <string-array name="category_options">
        <item>Reciclaje</item>
        <item>Pintura</item>
        <item>Reciclaje</item>
        <item>Pintura</item>
        <item>Decoración</item>
        <item>Carpintería</item>
        <item>Costura</item>
        <item>Textil</item>
        <item>Joyería</item>
        <item>Papelería</item>
        <item>Cerámica</item>
        <item>Modelado</item>
        <item>Jardinería</item>
        <item>Organización</item>
        <item>Regalos</item>
        <item>Juguetes</item>
        <item>Muebles</item>
    </string-array>

</resources>