<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />
    <item
        android:id="@+id/newPublicationFragment"
        android:icon="@drawable/ic_create"
        android:title="@string/create" />
    <item
        android:id="@+id/myPublicationsFragment"
        android:icon="@drawable/ic_saved"
        android:title="@string/creations" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/favorites" />
    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>