<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="80dp"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.manageaccount.ManageAccountsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="500dp">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="150dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_account_photo" />

                <Button
                    android:id="@+id/changePhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/updatePhoto"
                    android:textColor="@android:color/white"
                    android:theme="@style/Feed_Letters" />
            </LinearLayout>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:theme="@style/Feed_Letters2" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:theme="@style/Feed_Letters2" />

            <EditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="5dp"
                android:autoSizeMaxTextSize="16dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:theme="@style/Feed_Letters2" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:theme="@style/Feed_Letters2" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:theme="@style/Feed_Letters2" />

            <Button
                android:id="@+id/applyChangesButton"
                android:layout_width="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/black"
                android:text="@string/updateInfo"
                android:textColor="@android:color/white"
                android:theme="@style/Feed_Letters" />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/black"
                android:text="@string/logOut"
                android:textColor="@android:color/white"
                android:theme="@style/Feed_Letters" />

        </LinearLayout> </androidx.constraintlayout.widget.ConstraintLayout> </ScrollView>